--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <!-- <base href="/"> -->
 
-    <title>OptimizedHTML 4</title>
+    <title>Product Landing Page</title>
     <meta name="description" content="" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,8 +31,20 @@
   </head>
 
   <body>
-    <header id="header"></header>
-
+    <header id="header">
+      <div class="name-header-left">
+        <img
+          id="header-img"
+          src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+          alt="logo"
+        />
+      </div>
+      <div class="name-header-right">
+        <a href="#">Features</a>
+        <a href="#">How It Works</a>
+        <a href="#">Pricing</a>
+      </div>
+    </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/scripts.min.js"></script>
   </body>
