--- a/app/index.html
+++ b/app/index.html
@@ -39,11 +39,11 @@
           alt="logo"
         />
       </div>
-      <div class="name-header-right">
+      <nav id="nav-bar">
         <a href="#">Features</a>
         <a href="#">How It Works</a>
         <a href="#">Pricing</a>
-      </div>
+			</nav>
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/scripts.min.js"></script>
