--- a/app/index.html
+++ b/app/index.html
@@ -40,10 +40,18 @@
         />
       </div>
       <nav id="nav-bar">
-        <a href="#">Features</a>
-        <a href="#">How It Works</a>
-        <a href="#">Pricing</a>
-			</nav>
+        <ul class="nav-box">
+          <li class="nav-item">
+            <a href="#">Features</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">How It Works</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Pricing</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/scripts.min.js"></script>
