--- a/app/index.html
+++ b/app/index.html
@@ -41,18 +41,29 @@
       </div>
       <nav id="nav-bar">
         <ul class="nav-box">
-          <li class="nav-item">
+          <li class="nav-link">
             <a href="#">Features</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-link">
             <a href="#">How It Works</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-link">
             <a href="#">Pricing</a>
           </li>
         </ul>
       </nav>
     </header>
+    <main id="main">
+      <div class="get_started">
+        <form id="form" action="#">
+          <label class="label_email_input" for="email_input">
+            <h2>Handcrafted home-made masterpieces</h2>
+          </label>
+          <input type="email" name="email_input" id="email_input" />
+          <input type="submit" value="GET STARTED" />
+        </form>
+      </div>
+    </main>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="js/scripts.min.js"></script>
   </body>
