--- a/app/index.html
+++ b/app/index.html
@@ -59,8 +59,12 @@
           <label class="label_email_input" for="email_input">
             <h2>Handcrafted home-made masterpieces</h2>
           </label>
-          <input type="email" name="email_input" id="email_input" />
-          <input type="submit" value="GET STARTED" />
+          <div class="email_input_div">
+            <input type="email" name="email_input" />
+          </div>
+          <button class="form-submit-button" type="submit" name="submit">
+            GET STARTED
+          </button>
         </form>
       </div>
     </main>
