fix_4_step_responsibility

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,7 @@
       <div class="get_started">
         <form id="form" action="#">
           <label class="label_email_input" for="email_input">
-            <h2>Handcrafted home-made masterpieces</h2>
+            Handcrafted home-made masterpieces
           </label>
           <div class="email_input_div">
             <input type="email" name="email_input" />
