--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
       </div>
       <div id="video_box">
         <iframe
+          id="video"
           src="https://www.youtube.com/embed/y8Yv4pnO7qc"
           frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
